# diamond

./: .gitignore  CLAUDE.md  Cargo.toml  package.json
crates/agent-hook/: Cargo.toml
crates/agent-hook-hub/: Cargo.toml
crates/agent-hook-hub/src/: api.rs  logger.rs  main.rs  server.rs  session.rs  store.rs
crates/agent-hook/scripts/: generic_callback.py  hermes_callback.py  langchain_handler.py
crates/agent-hook/src/: client.rs  event.rs  lib.rs
crates/agent-hook/src/adapter/: claude_code.rs  generic.rs  hermes.rs  hermes_hooks.rs  langchain.rs  mod.rs  openclaw.rs
crates/agent-hook/src/patch/: mod.rs  process.rs  python.rs
docs/: hub-websocket-protocol.md
scripts/: build-sidecar.sh
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/base/: cmd.rs  init.rs  lightweight.rs  state.rs  tray.rs
src-tauri/src/base/window/: config.rs
src-tauri/src/hook/: detector.rs  hub.rs  manager.rs  mod.rs
src/components/: EventList.vue  FrameworkList.vue  HubControl.vue  StatusBar.vue  Titlebar.vue  index.ts
