[package]
name = "diamond"
version = "0.1.0"
description = "A Tauri App"
authors = ["Yoak3n"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "diamond_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
log = "0.4"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true

once_cell = "1.21.4"
anyhow = "^1.0.102"
parking_lot = "0.12"

mouse_position = "0.1.4"
delay_timer = "0.11.6"
dirs = "5"

# Agent hook
agent-hook = { path = "../crates/agent-hook", default-features = false }
ureq = "3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
